// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoColumn No props 1`] = `
.emotion-0 {
  float: right;
  line-height: 1.4;
  margin: 10px -300px 0 0;
  width: 280px;
}

@media screen and (max-width:782px) {
  .emotion-0 {
    float: none;
    margin-right: 0;
    width: 100%;
  }
}

<section
  className="emotion-0"
/>
`;

exports[`InfoColumn no button 1`] = `
.emotion-5 {
  float: right;
  line-height: 1.4;
  margin: 10px -300px 0 0;
  width: 280px;
}

@media screen and (max-width:782px) {
  .emotion-5 {
    float: none;
    margin-right: 0;
    width: 100%;
  }
}

.emotion-2 {
  border: 1px solid #e6e6e6;
  box-shadow: 0 1px 1px rgba(0,0,0,0.04);
  box-sizing: border-box;
  display: block;
  margin: 0 0 20px;
}

.emotion-0 {
  border-bottom: 1px solid #e6e6e6;
  color: #262626;
  font-size: 14px;
  font-weight: 700;
  padding: 8px 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-1 {
  font-size: 13px;
  padding: 6px 10px 20px;
}

<section
  className="emotion-5"
>
  <aside
    className="emotion-2"
  >
    <h3
      className="emotion-0"
    >
      Info!
    </h3>
    <div
      className="emotion-1"
    >
      <p
        key="0"
      >
        <input
          name="foo"
        />
      </p>
    </div>
  </aside>
  <aside
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <p
        key="0"
      >
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn with button 1`] = `
.emotion-5 {
  float: right;
  line-height: 1.4;
  margin: 10px -300px 0 0;
  width: 280px;
}

@media screen and (max-width:782px) {
  .emotion-5 {
    float: none;
    margin-right: 0;
    width: 100%;
  }
}

.emotion-2 {
  border: 1px solid #e6e6e6;
  box-shadow: 0 1px 1px rgba(0,0,0,0.04);
  box-sizing: border-box;
  display: block;
  margin: 0 0 20px;
}

.emotion-0 {
  border-bottom: 1px solid #e6e6e6;
  color: #262626;
  font-size: 14px;
  font-weight: 700;
  padding: 8px 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-1 {
  font-size: 13px;
  padding: 6px 10px 20px;
}

<section
  className="emotion-5"
>
  <aside
    className="emotion-2"
  >
    <h3
      className="emotion-0"
    >
      Info!
    </h3>
    <div
      className="emotion-1"
    >
      <p
        key="0"
      >
        <input
          name="foo"
        />
      </p>
      <button
        type="button"
      >
        Submit
      </button>
    </div>
  </aside>
  <aside
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <p
        key="0"
      >
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn with info and meta fields 1`] = `
.emotion-5 {
  float: right;
  line-height: 1.4;
  margin: 10px -300px 0 0;
  width: 280px;
}

@media screen and (max-width:782px) {
  .emotion-5 {
    float: none;
    margin-right: 0;
    width: 100%;
  }
}

.emotion-2 {
  border: 1px solid #e6e6e6;
  box-shadow: 0 1px 1px rgba(0,0,0,0.04);
  box-sizing: border-box;
  display: block;
  margin: 0 0 20px;
}

.emotion-0 {
  border-bottom: 1px solid #e6e6e6;
  color: #262626;
  font-size: 14px;
  font-weight: 700;
  padding: 8px 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-1 {
  font-size: 13px;
  padding: 6px 10px 20px;
}

<section
  className="emotion-5"
>
  <aside
    className="emotion-2"
  >
    <h3
      className="emotion-0"
    />
    <div
      className="emotion-1"
    >
      <p
        key="0"
      >
        <input
          name="foo"
        />
      </p>
    </div>
  </aside>
  <aside
    className="emotion-2"
  >
    <div
      className="emotion-1"
    >
      <p
        key="0"
      >
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn with infoFields 1`] = `
.emotion-3 {
  float: right;
  line-height: 1.4;
  margin: 10px -300px 0 0;
  width: 280px;
}

@media screen and (max-width:782px) {
  .emotion-3 {
    float: none;
    margin-right: 0;
    width: 100%;
  }
}

.emotion-2 {
  border: 1px solid #e6e6e6;
  box-shadow: 0 1px 1px rgba(0,0,0,0.04);
  box-sizing: border-box;
  display: block;
  margin: 0 0 20px;
}

.emotion-0 {
  border-bottom: 1px solid #e6e6e6;
  color: #262626;
  font-size: 14px;
  font-weight: 700;
  padding: 8px 12px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-1 {
  font-size: 13px;
  padding: 6px 10px 20px;
}

<section
  className="emotion-3"
>
  <aside
    className="emotion-2"
  >
    <h3
      className="emotion-0"
    />
    <div
      className="emotion-1"
    >
      <p
        key="0"
      >
        <input
          name="foo"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`InfoColumn with metaFields 1`] = `
.emotion-2 {
  float: right;
  line-height: 1.4;
  margin: 10px -300px 0 0;
  width: 280px;
}

@media screen and (max-width:782px) {
  .emotion-2 {
    float: none;
    margin-right: 0;
    width: 100%;
  }
}

.emotion-1 {
  border: 1px solid #e6e6e6;
  box-shadow: 0 1px 1px rgba(0,0,0,0.04);
  box-sizing: border-box;
  display: block;
  margin: 0 0 20px;
}

.emotion-0 {
  font-size: 13px;
  padding: 6px 10px 20px;
}

<section
  className="emotion-2"
>
  <aside
    className="emotion-1"
  >
    <div
      className="emotion-0"
    >
      <p
        key="0"
      >
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;
